--- a/src/interface.glade
+++ b/src/interface.glade
@@ -21,6 +21,7 @@
               <object class="GtkEntry" id="request_uri">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="activates_default">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -33,6 +34,7 @@
                 <property name="label" translatable="yes">button</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="can_default">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
